Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-8359

Coverage measurement is not working for Impala daemons

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • Impala 3.3.0
    • None
    • None
    • ghx-label-9

    Description

      Currently code coverage measurement only works for backend tests.

      Impala daemons don't write .gcda files when they terminate because they set a signal handler for SIGTERM.

      Attachments

        Activity

          People

            boroknagyz Zoltán Borók-Nagy
            boroknagyz Zoltán Borók-Nagy
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: