IMPALA-8359: Fix coverage data generation for impalads

impala::InitCommonRuntime() sets a signal handler for SIGTERM.
It calls _exit(0) which causes normal program termination without
cleaning up, i.e. no destructors are called etc.

Gcov writes the coverage data in this cleanup phase, so calling
_exit() prevents flushing coverage data.

Now the '-codecoverage' flag also defines a macro named
CODE_COVERAGE_ENABLED. If this macro is defined we explicitly
call __gcov_flush() before calling _exit().

I tested manually.

Change-Id: I9be1e1e73b6cfc3557077f763aee4dbfcc7a2d27
Reviewed-on: http://gerrit.cloudera.org:8080/12858
Reviewed-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>
Tested-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>